--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
 		"ts-jest": "^29.1.2",
 		"ts-node": "^10.9.2",
 		"tsup": "^8.0.2",
-		"typescript": "^5.4.5"
+		"typescript": "^5.4.5",
+		"@eslint/js": "^9.34.0",
+		"@stylistic/eslint-plugin": "^5.3.1",
+		"typescript-eslint": "^8.42.0"
 	},
 	"dependencies": {
 		"@je-es/lexer": "^0.1.0",
