--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@je-es/syntax",
-	"version": "0.1.8",
+	"version": "0.1.9",
 	"description": "Unified wrapper that streamlines syntax creation with integrated lexer-parser coordination, LSP support, and enhanced linting capabilities.",
 	"keywords": [
 		"je-es",
@@ -49,6 +49,7 @@
 	},
 	"dependencies": {
 		"@je-es/lexer": "^0.1.6",
-		"@je-es/parser": "^0.1.5"
+		"@je-es/parser": "^0.1.5",
+		"@je-es/ast": "^0.1.2"
 	}
 }
