--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
 	"name": "@je-es/syntax",
-	"version": "0.2.3",
+	"version": "0.2.4",
 	"description": "Defines the formal grammar and syntax rules.",
 	"keywords": [
 		"je-es",
-		"syntax",
-		"tool",
-		"convert",
-		"text",
-		"ast"
+		"syntax"
 	],
 	"license": "MIT",
 	"main": "./dist/syntax.js",
@@ -50,6 +46,6 @@
 	"dependencies": {
 		"@je-es/lexer": "^0.1.8",
 		"@je-es/parser": "^0.1.7",
-		"@je-es/ast": "^0.1.5"
+		"@je-es/ast": "^0.1.6"
 	}
 }
